overflow issue (horizontal scroll bar) removed

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body {
     background-image: linear-gradient(180deg, rgba(6,0,103,1) 0%, rgba(0,78,150,1) 72%, rgba(0,181,255,1) 100%);;
     font-family: "Special Elite", "PT Sans", "Helvetica Neue";
     margin: 0;
+    overflow-x: hidden;
 }
 
 #entry-text {
